# vqsort-rs

./: Cargo.toml  README.md  build.rs
src/: lib.rs  vqsort.cpp
tests/: test.rs
