[package]
authors = ["Jinjing Zhou"]
categories = ["algorithms"]
description = "Rust bindings for the Google Highway's vectorized quicksort"
edition = "2021"
keywords = ["fast", "simd", "sort", "sorting"]
license = "Apache-2.0 OR BSD-3-Clause"
name = "vsort-rs"
repository = "https://github.com/VoVAllen/vsort-rs"
version = "0.1.0"

[dependencies]
paste = "1.0.15"
rustversion = "1.0.17"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
system-deps = "6.2.2"

[dev-dependencies]
rand = { version = "0.8.5", default-features = false }
rand_pcg = "0.3.1"

[package.metadata.system-deps]

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
